--- a/index.html
+++ b/index.html
@@ -1,46 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Game</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body class="bg-gradient-to-br from-blue-500 to-purple-600 min-h-screen flex flex-col items-center justify-center p-4">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body
+    class="bg-gradient-to-br from-blue-500 to-purple-600 min-h-screen flex flex-col items-center justify-center p-4"
+  >
     <div class="w-full max-w-4xl mx-auto">
-        <h1 class="text-3xl md:text-4xl font-bold text-white text-center mb-2">Memory Game</h1>
-        <div class="flex flex-col md:flex-row justify-between items-center mb-6 gap-4">
-            <div class="flex items-center gap-4">
-                <div class="bg-white bg-opacity-20 rounded-lg p-3 text-white">
-                    <span class="font-bold">Moves: </span>
-                    <span id="moves">0</span>
-                </div>
-                <div class="bg-white bg-opacity-20 rounded-lg p-3 text-white">
-                    <span class="font-bold">Time: </span>
-                    <span id="time">0s</span>
-                </div>
-            </div>
-            <button id="restart" class="bg-white text-blue-600 hover:bg-blue-100 font-bold py-2 px-4 rounded-lg transition-all">
-                <i class="fas fa-redo mr-2"></i>Restart
-            </button>
+      <h1 class="text-3xl md:text-4xl font-bold text-white text-center mb-2">
+        Memory Game
+      </h1>
+      <div
+        class="flex flex-col md:flex-row justify-between items-center mb-6 gap-4"
+      >
+        <div class="flex items-center gap-4">
+          <div class="bg-white bg-opacity-20 rounded-lg p-3 text-white">
+            <span class="font-bold">Moves: </span>
+            <span id="moves">0</span>
+          </div>
+          <div class="bg-white bg-opacity-20 rounded-lg p-3 text-white">
+            <span class="font-bold">Time: </span>
+            <span id="time">0s</span>
+          </div>
         </div>
+        <button
+          id="restart"
+          class="bg-white text-blue-600 hover:bg-blue-100 font-bold py-2 px-4 rounded-lg transition-all"
+        >
+          <i class="fas fa-redo mr-2"></i>Restart
+        </button>
+      </div>
 
-        <div id="game-board" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-3 md:gap-4"></div>
+      <div
+        id="game-board"
+        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-3 md:gap-4"
+      ></div>
 
-        <div id="win-message" class="hidden fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50">
-            <div class="bg-white rounded-lg p-8 max-w-md w-full mx-4 text-center">
-                <h2 class="text-2xl font-bold text-blue-600 mb-4">Congratulations! 🎉</h2>
-                <p class="mb-2">You won in <span id="final-moves" class="font-bold">0</span> moves!</p>
-                <p class="mb-6">Time: <span id="final-time" class="font-bold">0s</span></p>
-                <button id="play-again" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-lg transition-all">
-                    Play Again
-                </button>
-            </div>
+      <div
+        id="win-message"
+        class="hidden fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50"
+      >
+        <div class="bg-white rounded-lg p-8 max-w-md w-full mx-4 text-center">
+          <h2 class="text-2xl font-bold text-blue-600 mb-4">
+            Congratulations! 🎉
+          </h2>
+          <p class="mb-2">
+            You won in <span id="final-moves" class="font-bold">0</span> moves!
+          </p>
+          <p class="mb-6">
+            Time: <span id="final-time" class="font-bold">0s</span>
+          </p>
+          <button
+            id="play-again"
+            class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-lg transition-all"
+          >
+            Play Again
+          </button>
         </div>
+      </div>
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
